@@ -3,7 +3,6 @@ package org.schabi.newpipe.settings.preferencesearch;
 import androidx.annotation.NonNull;
 import androidx.annotation.XmlRes;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -92,11 +91,7 @@ public class PreferenceSearchItem {
     }
 
     public List<String> getAllRelevantSearchFields() {
-        return Arrays.asList(
-            getTitle(),
-            getSummary(),
-            getEntries(),
-            getBreadcrumbs());
+        return List.of(getTitle(), getSummary(), getEntries(), getBreadcrumbs());
     }
 
     @NonNull
