@@ -2,7 +2,6 @@ package org.schabi.newpipe.util;
 
 import android.text.TextUtils;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.Set;
@@ -20,6 +19,6 @@ public final class CookieUtils {
     }
 
     public static Set<String> splitCookies(final String cookies) {
-        return new HashSet<>(Arrays.asList(cookies.split("; *")));
+        return Set.of(cookies.split("; *"));
     }
 }
